- MobyGames.com did not show & and other characters correctly in the title.
- Added cancel option when the item form is closed and unsaved changes are detected. This keeps the dialog open without making any changes.


--------------------------------------------------------------------
Data Crow version 4.10                        Released on 2023-08-22
--------------------------------------------------------------------

[New]
- Attachments can now be added to items. These documents are stored within the Data Crow data set in a compressed format (zip). All main modules allow for attachments to be added.
- Added drag and drop support for pictures (from file and directly from web pages) and attachments.
- New Russian translations has been added (not finalized) - major thanks to Ilya Sigidin.
- Portuguese translation has been revamped - major thanks to Pedro Albuquerque.

[Changed]
- On upgrade, Data Crow will convert all images to a standard format (JPEG). This is to reduce storage size and improve performance. Additionally a maximum resolution will be maintained: 3840 * 2160.
- Data Crow will no longer close windows or exit when pressing the escape key. This has been changed to CTRL/COMMAND+ESC.
- Create multiple now allows for rows to be deleted.
- Create multiple will only show one message when multiple items could not be saved.
- Update All will now process all items and show a combined message on failures (due to constraints) rather then individual messages.
- Filter dialog will keep the selected field and operator when adding entries.
- Extended the image formats supported by Data Crow, including webp.
- Online search will now store images to the temporary folder instead of keeping the images completely in memory.
- Related items are now shown in the quick view as well
 
[Fixed]
- Incorrect alignment of the filter label on the related items tab.
- Update all dialog; could not create new reference using the icon for the reference / references field.